--- a/src/default.css
+++ b/src/default.css
@@ -35,7 +35,7 @@
     height: 200px;
     padding-bottom: 48px;
     border: 3px solid #fff;
-    position: absolute;
+    position: fixed;
     right: 0;
     left: 0;
     top: 0;
