--- a/src/default.css
+++ b/src/default.css
@@ -1,3 +1,7 @@
+:root {
+    --video-timer-color-rgb: 0, 57, 127;
+}
+
 #video-timer-overlay {
     z-index: 10000;
     width: 100%;
@@ -8,7 +12,7 @@
     align-items: center;
     justify-content: center;
     color: #fff;
-    background: rgba(0, 57, 127, 0.9);
+    background: rgba(var(--video-timer-color-rgb), 0.9);
     font-size: 20px;
 }
 
@@ -25,7 +29,7 @@
     align-items: center;
     justify-content: center;
     color: #fff;
-    background-color: rgba(0, 57, 127, 0.75);
+    background-color: rgba(var(--video-timer-color-rgb), 0.75);
     font-size: 20px;
 }
 
@@ -45,7 +49,7 @@
     align-items: center;
     justify-content: center;
     color: #fff;
-    background-color: rgba(0, 57, 127);
+    background-color: rgba(var(--video-timer-color-rgb));
     font-size: 20px;
 }
 
@@ -60,7 +64,7 @@
     align-items: center;
     justify-content: center;
     color: #fff;
-    background-color: rgba(0, 57, 127);
+    background-color: rgba(var(--video-timer-color-rgb));
     font-size: 20px;
     cursor: pointer;
 }
